<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navMyProfile"
        android:icon="@drawable/nav_my_profile_selector"
        android:title="@string/my_profile" />
    <!--<item
        android:id="@+id/navigationCart"
        android:icon="@drawable/nav_cart_selector"
        android:title="@string/menu_my_cart" />-->
    <item
        android:id="@+id/navMyDownload"
        android:icon="@drawable/nav_my_download_selector"
        android:title="@string/my_downloads" />
    <item
        android:id="@+id/navSelfAnalysis"
        android:icon="@drawable/nav_my_download_selector"
        android:title="@string/self_analysis" />
    <item
        android:id="@+id/navNotification"
        android:icon="@drawable/nav_my_download_selector"
        android:title="@string/notification" />
</menu>