<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<!--    android:background="@drawable/component_icon"-->
    <ImageView
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/component_icon"
        android:scaleType="fitXY" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/llToolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnBack"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:layout_centerVertical="true"
                android:padding="@dimen/dp_6"
                android:src="@drawable/ic_baseline_navigate_before_24"
                app:tint="#333333" />


            <com.app.tensquare.ui.customview.TextViewPoppinsSemiBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="@dimen/dp_15"
                android:text="@string/sign_up"
                android:textColor="#161616"
                android:textSize="@dimen/sp_30" />


        </RelativeLayout>

        <com.app.tensquare.ui.customview.TextViewPoppinsMedium
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_45"
            android:text="@string/create_new_acc"
            android:textColor="@color/black_100"
            android:textSize="@dimen/sp_18" />

        <com.app.tensquare.ui.customview.TextViewPoppinsRegular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/lets_start"
            android:textColor="@color/gray_100"
            android:textSize="@dimen/sp_14" />

        <com.app.tensquare.ui.customview.EditTextPoppinsRegular
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_35"
            android:background="@drawable/bg_edittext"
            android:gravity="center_vertical"
            android:hint="@string/name"
            android:inputType="text"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
            android:maxLines="1"
            android:paddingHorizontal="@dimen/dp_23"
            android:textAllCaps="false"
            android:textColor="@color/black_150"
            android:textColorHint="@color/black_150"
            android:textSize="@dimen/sp_14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/bg_edittext"
            android:orientation="horizontal">

            <com.app.tensquare.ui.customview.EditTextPoppinsRegular
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:maxLength="3"
                android:paddingLeft="@dimen/dp_23"
                android:paddingRight="@dimen/dp_14"
                android:text="+91"
                android:enabled="false"
                android:textAllCaps="false"
                android:textColor="@color/black_150"
                android:textSize="@dimen/sp_14"
                android:textStyle="normal" />

            <View
                android:layout_width="@dimen/dp_1"
                android:layout_height="@dimen/dp_31"
                android:layout_gravity="center_vertical"
                android:background="@color/gray_20" />

            <com.app.tensquare.ui.customview.EditTextPoppinsRegular
                android:id="@+id/edtMobile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:maxLength="10"
                android:paddingLeft="@dimen/dp_11"
                android:paddingRight="@dimen/dp_23"
                android:textAllCaps="false"
                android:textColor="@color/black_150"
                android:textColorHint="@color/black_150"
                android:textSize="@dimen/sp_14"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_22"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/chkTerms"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:button="@null"
                android:drawableRight="@drawable/check_box_selector_no_shadow" />

            <com.app.tensquare.ui.customview.TextViewPoppinsRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/i_agree_with"
                android:textAllCaps="false"
                android:textColor="@color/gray_150"
                android:textSize="@dimen/sp_12"
                android:textStyle="normal" />

            <!--<com.app.elearning.ui.customview.TextViewPoppinsMedium
                android:id="@+id/btnTC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text=" T&amp;C "
                android:textAllCaps="false"
                android:textColor="@color/black_100"
                android:textSize="@dimen/sp_12"
                android:textStyle="normal" />

            <com.app.elearning.ui.customview.TextViewPoppinsRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="and"
                android:textAllCaps="false"
                android:textColor="@color/gray_150"
                android:textSize="@dimen/sp_12"
                android:textStyle="normal" />-->

            <com.app.tensquare.ui.customview.TextViewPoppinsMedium
                android:id="@+id/btnPrivacyPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_5"
                android:text="@string/privacy_policy"
                android:textAllCaps="false"
                android:textColor="@color/black_100"
                android:textSize="@dimen/sp_12"
                android:textStyle="normal" />

        </LinearLayout>

        <com.app.tensquare.ui.customview.TextViewPoppinsSemiBold
            android:id="@+id/txtProceed"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:layout_marginHorizontal="@dimen/dp_28"
            android:layout_marginTop="@dimen/dp_55"
            android:background="@drawable/rounded_background_green"
            android:gravity="center"
            android:text="@string/proceed_two"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_22">

            <com.app.tensquare.ui.customview.TextViewPoppinsRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/have_an_acc"
                android:textAllCaps="false"
                android:textColor="@color/gray_150"
                android:textSize="@dimen/sp_14"
                android:textStyle="normal" />

            <com.app.tensquare.ui.customview.TextViewPoppinsMedium
                android:id="@+id/txtSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_5"
                android:text="@string/sign_in_q"
                android:textAllCaps="false"
                android:textColor="@color/black_100"
                android:textSize="@dimen/sp_14"
                android:textStyle="normal" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>