<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<!--    android:background="@drawable/component_icon"-->
    <ImageView
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/component_icon"
        android:scaleType="fitXY" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_60">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btnBack"
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_40"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/dp_6"
                    android:src="@drawable/ic_baseline_navigate_before_24"
                    app:tint="#333333" />

                <com.app.tensquare.ui.customview.TextViewPoppinsRegular
                    android:id="@+id/txtSkip"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_40"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="@dimen/dp_10"
                    android:text="@string/Skip"
                    android:textAllCaps="false"
                    android:textColor="@color/gray_170"
                    android:textSize="@dimen/sp_16"
                    android:visibility="gone" />


            </RelativeLayout>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/dp_13"
                android:layout_marginTop="-40dp"
                android:src="@drawable/img_on_top_login" />

        </LinearLayout>


        <com.app.tensquare.ui.customview.TextViewPoppinsSemiBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login"
            android:textColor="@color/black_170"
            android:textSize="@dimen/sp_24" />

        <com.app.tensquare.ui.customview.EditTextPoppinsRegular
            android:id="@+id/edtMobile"
            style="@style/edit_text_style"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:hint="@string/mobile"
            android:inputType="phone"
            android:maxLength="10" />

        <!-- <com.app.elearning.ui.customview.EditTextPoppinsRegular
             android:id="@+id/edtPassword"
             style="@style/edit_text_style"
             android:layout_marginHorizontal="@dimen/dp_20"
             android:layout_marginTop="@dimen/dp_25"
             android:hint="Password"
             android:inputType="textPassword" />-->

        <!-- <com.app.elearning.ui.customview.TextViewPoppinsRegular
             android:id="@+id/txtForgotPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:layout_marginTop="@dimen/dp_5"
             android:layout_marginRight="@dimen/dp_28"
             android:paddingBottom="@dimen/dp_10"
             android:text="Forgot password"
             android:textAllCaps="false"
             android:textColor="@color/black_20"
             android:textSize="@dimen/sp_15" />-->

        <com.app.tensquare.ui.customview.TextViewPoppinsSemiBold
            android:id="@+id/txtSignIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:layout_marginHorizontal="@dimen/dp_28"
            android:layout_marginTop="@dimen/dp_40"
            android:background="@drawable/rounded_background_green"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_25">

            <com.app.tensquare.ui.customview.TextViewPoppinsSemiBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/is_new_user"
                android:textAllCaps="false"
                android:textColor="@color/gray_150"
                android:textSize="@dimen/sp_16"
                android:textStyle="normal" />

            <com.app.tensquare.ui.customview.TextViewPoppinsSemiBold
                android:id="@+id/txtSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_5"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/black_100"
                android:textSize="@dimen/sp_16"
                android:textStyle="normal" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>